# pyrawlifreader

./: README.md  pyproject.toml
src/pyrawlifreader/: __init__.py  liffile.py
